# quickjs-windows

./: .gitignore  .gitmodules  CMakeLists.txt  COPYING  README.md
patch/: quickjs-libc_patch.h
